# djangorestframework-camel-case2

./: .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py  tests.py  tox.ini
djangorestframework_camel_case2/: __init__.py  parser.py  render.py  util.py
tests/: test_converting.py
