[tool.poetry]
name = "djangorestframework-camel-case2"
version = "0.3.0"
description = "Camel case JSON support for Django REST framework"
readme = "README.md"
authors = ["jozo <hi@jozo.io>"]
repository = "https://github.com/jozo/djangorestframework-camel-case2"
homepage = "https://github.com/jozo/djangorestframework-camel-case2"

keywords = ['django', 'camel-case', 'django-rest-framework']

[tool.poetry.dependencies]
python = "^3.5"
django = ">= 2.2"
djangorestframework = ">= 3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "^3.14.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
